--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<i class="fas fa-search" aria-hidden="true"></i>
 		</div>
 		<div id="iconDiv" class="">
-			<img src"" alt="icon" id="icon" style="height:62.5%;width:100%;" class="rounded mx-auto d-block center">
+			<img alt="icon" id="icon" style="height:62.5%;width:100%;" class="rounded mx-auto d-block center">
 		</div>
 		<div id="text">
 			<div>
@@ -42,12 +42,11 @@
 			<div class="row">
 				<div class="col-6 row" style="margin-left:15px;margin-right:5px;margin-top:20px;">
 					<label> Select unit for temperature: &nbsp;&nbsp;&nbsp;&nbsp; </label>
-					<select style="width:100px;text" onchange="tempUnitChange(this)">
+					<select style="width:100px;" onchange="tempUnitChange(this)">
 						<option selected id="celsius">&#8451;</option>
 						<option id="fahrenheit">&#8457;</option>
 					</select>
 				</div>
-				</br>
 				<div class="row col-sm-12" style="margin-left:15px;margin-top:15px; margin-right:5px;">
 					<label> Select unit for distance:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					<select style="width:100px;" onchange="distUnitChange(this)">
@@ -63,9 +62,7 @@
 					<thead>
 
 						<tr>
-							<th colspan="3">
-								<h1 style="text-align:left;">Forecast</h1>
-							</th>
+							<th colspan="3" style="font-size: 2em;text-align:left; ">Forecast </th>
 							<th>Min temp</th>
 							<th>Max temp</th>
 							<th>Avg temp</th>
